// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skill should invoke LaunchIntent 1`] = `
Object {
  "response": Object {
    "card": Object {
      "content": "¡Hola! ¡Bienvenido al Alfabeto con MiKarmen! Puedo explicarte cómo vamos a aprender el alfabeto o podemos empezar directamente a practicar. ¿Qué quieres hacer? ¿Escuchar la explicación o empezar a practicar?",
      "title": "¡Bienvenido al Alfabeto con MiKarmen!",
      "type": "Simple",
    },
    "outputSpeech": Object {
      "ssml": "<speak>¡Hola! ¡Bienvenido al Alfabeto con MiKarmen! Puedo explicarte cómo vamos a aprender el alfabeto o podemos empezar directamente a practicar. ¿Qué quieres hacer? ¿Escuchar la explicación o empezar a practicar?</speak>",
      "type": "SSML",
    },
    "reprompt": Object {
      "outputSpeech": Object {
        "ssml": "<speak>¿Escuchar la explicación o empezar a practicar?</speak>",
        "type": "SSML",
      },
    },
    "shouldEndSession": false,
  },
  "sessionAttributes": Object {},
  "userAgent": "ask-node/2.0.7 Node/v8.11.1",
  "version": "1.0",
}
`;

exports[`Skill should invoke PracticeIntent 1`] = `
Object {
  "response": Object {
    "card": Object {
      "content": "<p>Actividad uno. Escucha atentamente las letras del alfabeto español.</p><p>a</p>",
      "title": "Actividad uno.",
      "type": "Simple",
    },
    "directives": Array [
      Object {
        "slotToElicit": "letter",
        "type": "Dialog.ElicitSlot",
      },
    ],
    "outputSpeech": Object {
      "ssml": "<speak><p>Actividad uno. Escucha atentamente las letras del alfabeto español.</p><p>a</p></speak>",
      "type": "SSML",
    },
    "reprompt": Object {
      "outputSpeech": Object {
        "ssml": "<speak>¿Quieres que vuelva a leerlas?</speak>",
        "type": "SSML",
      },
    },
    "shouldEndSession": false,
  },
  "sessionAttributes": Object {
    "currentLetter": "a",
    "state": "PRACTICE_1",
  },
  "userAgent": "ask-node/2.0.7 Node/v8.11.1",
  "version": "1.0",
}
`;

exports[`Skill should invoke PracticeIntent with right answer 1`] = `
Object {
  "response": Object {
    "card": Object {
      "content": "<p>Right answer!</p><p>b</p>",
      "title": "Actividad uno.",
      "type": "Simple",
    },
    "directives": Array [
      Object {
        "slotToElicit": "letter",
        "type": "Dialog.ElicitSlot",
      },
    ],
    "outputSpeech": Object {
      "ssml": "<speak><p>Right answer!</p><p>b</p></speak>",
      "type": "SSML",
    },
    "reprompt": Object {
      "outputSpeech": Object {
        "ssml": "<speak>¿Quieres que vuelva a leerlas?</speak>",
        "type": "SSML",
      },
    },
    "shouldEndSession": false,
  },
  "sessionAttributes": Object {
    "currentLetter": "b",
    "state": "PRACTICE_1",
  },
  "userAgent": "ask-node/2.0.7 Node/v8.11.1",
  "version": "1.0",
}
`;

exports[`Skill should invoke PracticeIntent with wrong answer 1`] = `
Object {
  "response": Object {
    "card": Object {
      "content": "<p>Wrong answer, please repeat.</p><p>a</p>",
      "title": "Actividad uno.",
      "type": "Simple",
    },
    "directives": Array [
      Object {
        "slotToElicit": "letter",
        "type": "Dialog.ElicitSlot",
      },
    ],
    "outputSpeech": Object {
      "ssml": "<speak><p>Wrong answer, please repeat.</p><p>a</p></speak>",
      "type": "SSML",
    },
    "reprompt": Object {
      "outputSpeech": Object {
        "ssml": "<speak>¿Quieres que vuelva a leerlas?</speak>",
        "type": "SSML",
      },
    },
    "shouldEndSession": false,
  },
  "sessionAttributes": Object {
    "currentLetter": "a",
    "state": "PRACTICE_1",
  },
  "userAgent": "ask-node/2.0.7 Node/v8.11.1",
  "version": "1.0",
}
`;
